--- a/followISS/client/followISS.html
+++ b/followISS/client/followISS.html
@@ -11,16 +11,29 @@
     <title>FollowISS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <!-- <script src="map.js"></script> -->
+    <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
+
+
 </head>
 
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div>
-        <table>
+    <div id="header">
+        <h2>Follow the International Space Station</h2>
+    </div>
+    <div id="map"></div>
+    <script src="map.js"></script>
+    <div style="padding-block: 10px;"></div>
+    <div class="PageContent">
+        <table id="InfoTable">
             <tr>
                 <th>Unix Timestamp</th>
                 <th>Latitude</th>
