--- a/followISS/client/followISS.html
+++ b/followISS/client/followISS.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
 
 <head>
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- <script src="map.js"></script> -->
@@ -32,22 +32,28 @@
     <div id="map"></div>
     <script src="map.js"></script>
     <div style="padding-block: 10px;"></div>
-    <div class="PageContent">
-        <table id="InfoTable">
-            <tr>
-                <th>Unix Timestamp</th>
-                <th>Latitude</th>
-                <th>Longitude</th>
-            </tr>
-            <tr>
-                <td id="DateTime"></td>
-                <td id="Latitude"></td>
-                <td id="Longitude"></td>
-            </tr>
-
-
+    <div class="w-85 p-3" style="margin: auto; width:80%; border: 2px solid black; border-radius: 7px;">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Latitude</th>
+                    <th scope="col">Longitude</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr style="font-weight: 600;">
+                    <td id="DateTime"></td>
+                    <td id="Latitude"></td>
+                    <td id="Longitude"></td>
+                </tr>
+            </tbody>
         </table>
     </div>
+    <div style="padding-bottom: 10px"></div>
+
+
+
 
 </body>
 
