--- a/followISS/client/followISS.html
+++ b/followISS/client/followISS.html
@@ -59,7 +59,7 @@
                     <tbody>
                         <tr class="tableBody" style="font-weight: 600;">
                             <td id="DateTime" class="text-content" style="text-align: left;"></td>
-                            <td id="Latitude" class="text-content" style="color: white;"></td>
+                            <td id="Latitude" class="text-content"></td>
                             <td id="Longitude" class="text-content"></td>
                         </tr>
                     </tbody>
