--- a/followISS/client/followISS.html
+++ b/followISS/client/followISS.html
@@ -32,23 +32,11 @@
         <![endif]-->
 
     <!-- Card Element -->
-    <div style="padding-top: 10px;"></div>
-    <div class="card text-white bg-dark mb-3" style="width: 90%; margin: auto; padding-top: 10px;">
+    <div class="card text-white bg-dark mb-3" style="width: 95%; margin: auto; padding-top: 10px;">
         <div class="card-header">
-            <ul class="nav nav-pills card-header-pills" style="padding-left: 12px">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Disabled</a>
-                </li>
-            </ul>
+            <h2 class="card-title">Follow the International Space Station</h2>
         </div>
         <div class="card text-white bg-dark mb-3">
-            <h2 class="card-title" style="padding-left:20px;">Follow the International Space Station</h2>
             <div id="map" style="width:100%"></div>
             <script src="map.js"></script>
             <div class="w-100 p-3" style="margin: auto; width:100%">
