annotations for future of project

--- a/followISS/client/followISS.html
+++ b/followISS/client/followISS.html
@@ -33,7 +33,7 @@
     <!-- Card Element -->
     <div class="card text-white bg-dark mb-3" style="width: 95%; margin: auto; padding-top: 10px;">
         <div class="card-header">
-            <h2 class="card-title">Follow the International Space Station</h2>
+            <h2 class="card-title">Follow the International Space Station around the world</h2>
         </div>
         <div class="card text-white bg-dark mb-3">
             <div id="map" style="width:100%"></div>
